2007-11-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	major rewrite -> low level file handling, 
	supports UTF-16/UTF-32 files now, better FIFO handling

	* akfavatar.h, aavatar.c (avt_update):
	new function

	* avatar.c (avt_put_char):
	don't ignore false BOM anymore, just the real BOM

	* akfavatar.pas:
	use avt_say_mb_len
	fix fo FPC: for output only the flush function gets defined 
	
        * akfavatar.h (avt_mb_decode, avt_free):
	new functions

	* avatar.c (avt_put_char):
	new function
	
	* akfavatar.h, avatar.c (avt_say_len, avt_say_mb_len):
	new functions

	* avatar.c (avt_mb_decode):
	decode a given size, input string needn't be terminated anymore
	incomplete sequences are stored for later use (up to 9 bytes)

2007-10-28  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.4 released

	* configure, avatar-audio.c:
	fixes for old SDL versions (1.2.0)

	* balloonpointer.c, circle.c:
	fixes for old compilers

	* akfavatar.h, avatar.c (avt_initialize):
	new mode: AUTOMODE

	* avatarsay (processfile):
	fix: use clearerr when ignore_eof is set

	* configure, Makefile.in:
	compatiblity to FreeBSD (pmake)
	
	* avatar.c (avt_mb_encoding):
	try to autodetect internal encoding

	* avatar.c (MB_DEFAULT_ENCODING):
	fixed typo

	* avatar.c (avt_drawchar, avt_ask):
	don't use wint_t for compatiblity reasons (wasn't needed anyway)

2007-10-16  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.3 released

	* akfavatar.pas (ScreenSize):
	implemented as functuion (was a variable)

	* akfavatar.pas (AvatarImageData, LoadSoundData, ShowImageData):
	new functions

	* font.c, avatar.c:
	support for 9x18 font with 800x600 resolution
	640x480 only used, when compiled for symbol "VGA"
	
	* avatar.c (avt_drawchar):
	added general support for fixed fontwidth > 8 <= 16

	* avatarsay:
	new option: --popup

	* gnome-avatarsay:
	write .encoding into new files

	* avatar.c (avt_delete_lines, avt_insert_lines):
	optimized scrolling
